--- a/style.css
+++ b/style.css
@@ -101,6 +101,7 @@ section{
     border-style: solid;
     border-width: 1px;
     margin-top: 40px;
+    box-shadow: rgba(0, 0, 0, 0.2) 0px 10px 50px -10px;
 }
 
 .justify{
