--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Bellota:wght@300&family=Nixie+One&family=Poiret+One&family=Raleway:wght@200;300&family=Ysabeau:wght@100&display=swap');
 
-*{
-    scroll-behavior: smooth;
+html{
+    scroll-behavior:smooth;
 }
 
 body{
@@ -133,6 +133,12 @@ section{
     margin-top: 0px;
 }
 
+@media (max-width: 1024px){
+    body{
+        width: 80%;
+    }
+}
+
 @media (max-width: 960px){
     #Sobre > div{
         display: flex;
@@ -142,6 +148,10 @@ section{
 }
 
 @media (max-width: 768px) {
+
+    body{
+        width: 80%;
+    }
 
     #Sobre > div{
         display: flex;
