--- a/style.css
+++ b/style.css
@@ -125,6 +125,53 @@ section{
     text-align: center;
 }
 
+#faq{
+
+}
+
+details {
+    width: 80%;
+    margin: 0 auto ;
+    background: white;
+    margin-bottom: .5rem;
+    overflow: hidden;
+    border: #282828;
+    border-color: black;
+  }
+
+summary{
+    padding: 1rem;
+    display: block;
+    padding-left: 2.2rem;
+    position: relative;
+    cursor: pointer;
+}
+
+summary:before {
+    content: '';
+    border-width: .4rem;
+    border-style: solid;
+    border-color: transparent transparent transparent black;
+    position: absolute;
+    top: 1.3rem;
+    left: 1rem;
+    transform: rotate(0);
+    transform-origin: .2rem 50%;
+    transition: 0.35s transform ease;
+  }
+
+  details[open] > summary:before {
+    transform: rotate(90deg);
+  }
+
+  details summary::-webkit-details-marker {
+    display:none;
+  }
+
+section details summary{
+    padding: 2%;
+}
+
 .content{
     display: inline-block;
     padding: 20px;
