--- a/style.css
+++ b/style.css
@@ -37,6 +37,60 @@ nav > ul > li{
     padding: 15px;
 }
 
+.faq{
+    margin-top: 3rem;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.faq ul{
+    margin: 3rem;
+    width: 75%;
+    max-width: 900px;
+}
+
+.faq ul li{
+    list-style: none;
+    margin-bottom: 8px;
+}
+
+.faq .questao{
+    margin-bottom: 1px;
+    padding: 20px;
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    cursor: pointer;
+}
+
+.faq .icon{
+    margin-left: 1rem;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    transition: transform 0.25s ease-in-out;
+}
+
+.faq .resposta{
+    max-height: 0;
+    overflow: hidden;
+    transition: max-height 0.25s cubic-bezier(0.5, 0.1, 1);
+}
+
+.faq .resposta span{
+    display: inline-block;
+    padding: 1.2rem;
+}
+
+.faq .questao.open + .resposta{
+    max-height: 1200px;
+}
+
+.faq .questao.open > .icon{
+    transform: rotate(45deg);
+}
+
 main{
     padding: 80px;
     text-align: center;
@@ -123,53 +177,6 @@ section{
 
 #Atendimento{
     text-align: center;
-}
-
-#faq{
-
-}
-
-details {
-    width: 80%;
-    margin: 0 auto ;
-    background: white;
-    margin-bottom: .5rem;
-    overflow: hidden;
-    border: #282828;
-    border-color: black;
-  }
-
-summary{
-    padding: 1rem;
-    display: block;
-    padding-left: 2.2rem;
-    position: relative;
-    cursor: pointer;
-}
-
-summary:before {
-    content: '';
-    border-width: .4rem;
-    border-style: solid;
-    border-color: transparent transparent transparent black;
-    position: absolute;
-    top: 1.3rem;
-    left: 1rem;
-    transform: rotate(0);
-    transform-origin: .2rem 50%;
-    transition: 0.35s transform ease;
-  }
-
-  details[open] > summary:before {
-    transform: rotate(90deg);
-  }
-
-  details summary::-webkit-details-marker {
-    display:none;
-  }
-
-section details summary{
-    padding: 2%;
 }
 
 .content{
